--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-reanimated": "^3.12.0",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^8.1.3",
+    "reduxjs-toolkit-persist": "^7.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
