--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-formtastic": "^1.0.8",
     "react-native-reanimated": "^3.12.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
@@ -38,6 +41,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
