--- a/package.json
+++ b/package.json
@@ -20,13 +20,22 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-formtastic": "^1.0.8",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.1.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-voicebox-speech-rec": "^1.0.4",
+    "react-native-volume-manager": "^1.10.0",
+    "react-native-webview": "^13.10.3",
     "react-redux": "^8.1.3",
     "reduxjs-toolkit-persist": "^7.2.1"
   },
