--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-voicebox-speech-rec": "^1.0.4",
     "react-native-volume-manager": "^1.10.0",
