--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.2.0",
     "react-native-voicebox-speech-rec": "^1.0.4",
     "react-native-volume-manager": "^1.10.0",
     "react-native-webview": "^13.10.3",
