--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-actions-sheet": "^0.9.3",
     "react-native-formtastic": "^1.0.8",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-crop-picker": "^0.41.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.1.0",
     "react-native-paper": "^5.12.3",
